Proyecto_servicio_ws/ros2_ws/log/build_2026-05-07_23-07-10/mi_primer_paquete/stdout_stderr.log
running egg_info
writing ../../build/mi_primer_paquete/mi_primer_paquete.egg-info/PKG-INFO
writing dependency_links to ../../build/mi_primer_paquete/mi_primer_paquete.egg-info/dependency_links.txt
writing entry points to ../../build/mi_primer_paquete/mi_primer_paquete.egg-info/entry_points.txt
writing requirements to ../../build/mi_primer_paquete/mi_primer_paquete.egg-info/requires.txt
writing top-level names to ../../build/mi_primer_paquete/mi_primer_paquete.egg-info/top_level.txt
reading manifest file '../../build/mi_primer_paquete/mi_primer_paquete.egg-info/SOURCES.txt'
writing manifest file '../../build/mi_primer_paquete/mi_primer_paquete.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/aldo/ros2_ws/install/mi_primer_paquete/lib/python3.12/site-packages/mi_primer_paquete/CinematicaInversa.py to CinematicaInversa.cpython-312.pyc
byte-compiling /home/aldo/ros2_ws/install/mi_primer_paquete/lib/python3.12/site-packages/mi_primer_paquete/cine_inver.py to cine_inver.cpython-312.pyc
  File "/home/aldo/ros2_ws/install/mi_primer_paquete/lib/python3.12/site-packages/mi_primer_paquete/CinematicaInversa.py", line 17
    xi = Matrix([T_0_p[0, 3],import rclpy
                             ^^^^^^
SyntaxError: invalid syntax

Sorry: IndentationError: expected an indented block after 'for' statement on line 123 (cine_inver.py, line 124)
running install_data
running install_egg_info
removing '/home/aldo/ros2_ws/install/mi_primer_paquete/lib/python3.12/site-packages/mi_primer_paquete-0.0.0-py3.12.egg-info' (and everything under it)
Copying ../../build/mi_primer_paquete/mi_primer_paquete.egg-info to /home/aldo/ros2_ws/install/mi_primer_paquete/lib/python3.12/site-packages/mi_primer_paquete-0.0.0-py3.12.egg-info
running install_scripts
Installing clicked_point_a_juntas script to /home/aldo/ros2_ws/install/mi_primer_paquete/lib/mi_primer_paquete
Installing publicador_angulos script to /home/aldo/ros2_ws/install/mi_primer_paquete/lib/mi_primer_paquete
Installing publicador_juntas_terminal script to /home/aldo/ros2_ws/install/mi_primer_paquete/lib/mi_primer_paquete
Installing publisher script to /home/aldo/ros2_ws/install/mi_primer_paquete/lib/mi_primer_paquete
Installing punto_objetivo script to /home/aldo/ros2_ws/install/mi_primer_paquete/lib/mi_primer_paquete
Installing subscriber script to /home/aldo/ros2_ws/install/mi_primer_paquete/lib/mi_primer_paquete
Installing subscriber_2 script to /home/aldo/ros2_ws/install/mi_primer_paquete/lib/mi_primer_paquete
Installing subscriber_inter script to /home/aldo/ros2_ws/install/mi_primer_paquete/lib/mi_primer_paquete
writing list of installed files to '/home/aldo/ros2_ws/build/mi_primer_paquete/install.log'
